# hmdp

./: .gitignore  MDP.cabal  README.md  stack.yaml
app/: Main.hs
src/: DP.hs  MDP.hs  Planning.hs  PlanningM.hs
test/: Spec.hs  TestDP.hs  TestPlanning.hs
